--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <section class="hero-sec">
         <div class="container hero-inner">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="button" type="button">Order Service</button>
+          <button class="hero-button" type="button">Order Service</button>
         </div>
       </section>
 
@@ -450,5 +450,32 @@
         </div>
       </div>
     </footer>
+
+    <!-- Modal -->
+    <div class="backdrop is-open">
+      <div class="modal">
+          <button class="close-button" type="button">
+            <svg class="close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+        
+          <p class="modal-title">Leave your contacts and we will call you back</p>
+
+          <label for="name">Name</label>
+          <input class="modal-input" type="text" name="name" id="name" />
+
+          <label for="phone">Phone</label>
+          <input class="modal-input" type="text" name="phone" id="phone" />
+
+          <label for="email">Email</label>
+          <input class="modal-input" type="text" name="email" id="email" />
+
+          <label for="comment">Comment</label>
+          <input class="modal-textarea" type="textarea" name="comment" id="comment" />
+
+        <form></form>
+      </div>
+    </div>
   </body>
 </html>
