--- a/index.html
+++ b/index.html
@@ -462,17 +462,36 @@
         
           <p class="modal-title">Leave your contacts and we will call you back</p>
 
-          <label for="name">Name</label>
+          <div class="modal-field">
+          <label class="modal-label" for="name">Name</label>
           <input class="modal-input" type="text" name="name" id="name" />
+        </div>
 
-          <label for="phone">Phone</label>
+        <div class="modal-field">
+          <label class="modal-label" for="phone">Phone</label>
           <input class="modal-input" type="text" name="phone" id="phone" />
+        </div>
 
-          <label for="email">Email</label>
+          <div class="modal-field">
+          <label class="modal-label" for="email">Email</label>
           <input class="modal-input" type="text" name="email" id="email" />
+        </div>
 
-          <label for="comment">Comment</label>
-          <input class="modal-textarea" type="textarea" name="comment" id="comment" />
+          <div class="modal-field">
+          <label class="modal-label" for="textarea">Comment</label>
+          <input class="modal-textarea" type="textarea" name="textarea" id="comment" placeholder="Text input" />
+        </div>
+
+          <div class="modal-checkbox-wrap">
+          <input class="modal-checkbox" type="checkbox" name="checkbox" />
+          <p class="modal-checkbox-text">
+            I accept the terms and conditions of the <a class="modal-checkbox-link" href="#">Privacy Policy</a>
+          </p>
+        </div>
+
+          <button class="send-button" type="submit">
+            Send
+          </button>
 
         <form></form>
       </div>
