add styles to inputs, checkbox; redact modal positioning

--- a/index.html
+++ b/index.html
@@ -459,39 +459,57 @@
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
-        
           <p class="modal-title">Leave your contacts and we will call you back</p>
 
-          <div class="modal-field">
+        <div class="modal-field">
           <label class="modal-label" for="name">Name</label>
-          <input class="modal-input" type="text" name="name" id="name" />
+          <div class="modal-input-wrap">
+            <input class="modal-input" type="text" name="name" id="name" autofocus />
+            <svg class="input-icon" width="16" height="24">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+          </div>
         </div>
 
         <div class="modal-field">
           <label class="modal-label" for="phone">Phone</label>
-          <input class="modal-input" type="text" name="phone" id="phone" />
+          <div class="modal-input-wrap">
+            <input class="modal-input" type="text" name="phone" id="phone" />
+            <svg class="input-icon" width="16" height="24">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
         </div>
 
-          <div class="modal-field">
+        <div class="modal-field">
           <label class="modal-label" for="email">Email</label>
-          <input class="modal-input" type="text" name="email" id="email" />
+          <div class="modal-input-wrap">
+            <input class="modal-input" type="text" name="email" id="email" />
+            <svg class="input-icon" width="16" height="24">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
         </div>
 
-          <div class="modal-field">
+        <div class="modal-field">
           <label class="modal-label" for="textarea">Comment</label>
           <input class="modal-textarea" type="textarea" name="textarea" id="comment" placeholder="Text input" />
         </div>
 
-          <div class="modal-checkbox-wrap">
-          <input class="modal-checkbox" type="checkbox" name="checkbox" />
-          <p class="modal-checkbox-text">
-            I accept the terms and conditions of the <a class="modal-checkbox-link" href="#">Privacy Policy</a>
-          </p>
+        <div class="modal-checkbox-wrap">
+          <input class="modal-checkbox-input visually-hidden" type="checkbox" name="checkbox" id="checkbox" />
+          <span class="checkbox-check">
+            <svg class="checkbox-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-icon-click"></use>
+            </svg>
+          </span>
+          <label class="modal-checkbox-text" for="checkbox">
+            I accept the terms and conditions of the 
+            <a class="modal-checkbox-link" href="#">Privacy Policy</a>
+          </label>
         </div>
 
-          <button class="send-button" type="submit">
-            Send
-          </button>
+          <button class="send-button" type="submit">Send</button>
 
         <form></form>
       </div>
