--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
         <div class="modal-field">
           <label class="modal-label" for="textarea">Comment</label>
-          <input class="modal-textarea" type="textarea" name="textarea" id="comment" placeholder="Text input" />
+          <input class="modal-textarea" type="textarea" name="textarea" id="textarea" value="comment"  placeholder="Text input" />
         </div>
 
         <div class="modal-checkbox-wrap">
