redact footer-button

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             <label class="footer-label visually-hidden" for="footer-input"></label>
             <input class="footer-input" type="email" name="email" id="footer-input" placeholder="Email" />
             <button class="footer-button" type="button">
-              <p class="footer-button-text">Subscribe</p>
+              Subscribe
               <svg class="footer-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-telegram"></use>
               </svg>
@@ -470,7 +470,7 @@
     </footer>
 
     <!-- Modal -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
           <button class="close-button" type="button">
             <svg class="close-icon" width="8" height="8">
