--- a/index.html
+++ b/index.html
@@ -516,24 +516,26 @@
 
           <div class="modal-field-textarea">
             <label class="modal-label" for="user-comment">Comment</label>
-            <input class="modal-textarea" type="textarea" name="user-comment" id="comment"  placeholder="Text input" />
+            <textarea class="modal-textarea" type="textarea" name="user-comment" id="user-comment"  placeholder="Text input" ></textarea>
           </div>
 
-          <div class="modal-checkbox-wrap">
-            
-          <input class="modal-checkbox-input visually-hidden" type="checkbox" name="checkbox" id="user-privacy" />
-          <label class="modal-checkbox-label" for="user-privacy">
-            I accept the terms and conditions of the 
-            <span class="checkbox-check">
-              <svg class="checkbox-icon" width="10" height="8">
-                <use href="./images/icons.svg#icon-icon-click"></use>
-              </svg>
-            </span>
-            <a class="modal-checkbox-link" href="#">Privacy Policy</a>
-          </label>
-          
+          <div class="modal-field-checkbox">
+
+            <input class="modal-checkbox-input visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy" />
+            <label class="modal-checkbox-label" for="user-privacy">
+              <span class="checkbox-check">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the 
+              <a class="modal-checkbox-link" href="#">Privacy Policy</a>
+            </label>
+
           </div>
+
           <button class="send-button" type="submit">Send</button>
+
         </form>
       </div>
     </div>
