--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 
           <div class="modal-field-textarea">
             <label class="modal-label" for="user-comment">Comment</label>
-            <textarea class="modal-textarea" type="textarea" name="user-comment" id="user-comment"  placeholder="Text input" ></textarea>
+            <textarea class="modal-textarea" name="user-comment" id="user-comment"  placeholder="Text input" ></textarea>
           </div>
 
           <div class="modal-field-checkbox">
